docs: document Agrona runtime requirement